--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -833,6 +833,24 @@ js-config: js-config.in Makefile $(DEPTH)/config/autoconf.mk $(topsrcdir)/config
 SCRIPTS = js-config
 SDK_BINARY = js-config
 
+pkg_config_files = \
+	mozjs185.pc \
+	$(NULL)
+
+GARBAGE += $(pkg_config_files)
+
+%.pc: $(srcdir)/%.pc.in Makefile
+	cat $< | sed \
+	-e "s|%prefix%|$(prefix)|" \
+	-e "s|%includedir%|$(includedir)|" \
+	-e "s|%libdir%|$(libdir)|" \
+	-e 's|%MOZILLA_VERSION%|$(MOZILLA_VERSION)|' \
+	> $@ && chmod 644 $@
+
+install:: $(pkg_config_files)
+	@echo pkg_config_file: $(pkg_config_files)
+	$(SYSINSTALL) $(IFLAGS1) $^ $(DESTDIR)$(libdir)/pkgconfig
+
 install:: $(INSTALLED_HEADERS)
 	$(SYSINSTALL) $^ $(DESTDIR)$(includedir)/$(MODULE)
 
