Remove directory component of path from SONAME on ELF to make room for rpath

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -853,7 +853,7 @@ else
 SHLIB_ANY_VER   := $(DESTDIR)$(libdir)/$(SHARED_LIBRARY)
 SHLIB_ABI_VER   := $(DESTDIR)$(libdir)/$(SHARED_LIBRARY).$(SRCREL_ABI_VERSION)
 SHLIB_EXACT_VER := $(DESTDIR)$(libdir)/$(SHARED_LIBRARY).$(SRCREL_VERSION)
-$(SHARED_LIBRARY): EXTRA_DSO_LDOPTS += -Wl,-soname,$(SHLIB_ABI_VER)
+$(SHARED_LIBRARY): EXTRA_DSO_LDOPTS += -Wl,-soname,$(notdir $(SHLIB_ABI_VER))
 endif
 endif
 
